np-allow-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-drone-store
  namespace: drone-store
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 3000
      protocol: TCP
    - port: 3001
      protocol: TCP
    - port: 4000
      protocol: TCP
    - port: 5000
      protocol: TCP
    - port: 8001
      protocol: TCP
    - port: 5678
      protocol: TCP
    - port: 8080
      protocol: TCP
  - from:
    - podSelector: {}
